Simplify SNMP access with users and groups
